--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "content_scripts" : [
         {
             "js" : [ "content.js" ],
-            "matches" : [ "<all_urls>" ],
+            "matches" : [ "https://www.youtube.com/*" ],
             "run_at" : "document_idle"
         }
     ],
